--- a/index.html
+++ b/index.html
@@ -29,26 +29,19 @@
           <img src="http://solutions.brightcove.com/wmatsuo/navlogo.png" alt="Logo" class="navlogo">
 
           <ul class="list">
-            <li><a href="#">管理者</a></li>
-            <li><a href="Media.html">Media</a></li>
-            <li><a href="#">Player</a></li>
-            <li><a href="#">Analytics</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li>
-              <ul>
-                <li><a href="https://landing.gallery.video">Portal</a></li>
-                <li><a href="GalleryIPX.html">In Page</a></li>
-                <li><a href="#">Liveイベント</a></li>
-              </ul>
-            <li><a href="">Campaign</a></li>
-              <ul>
-                <li><a href="Campaign.html">非MAP</a></li>
-                <li><a href="Custom.html">カスタム連携</a></li>
-              </ul>
-            <li><a href="#">Social</a></li>
-            <li><a href="#">Live</a></li>
-            <li><a href="#">CloudPlayout</a></li>
-            </li>
+            <li><a href="#">Key PM Terms</a></li>
+            <li><a href="#">Role and Responsibilities</a></li>
+            <li><a href="#">Communication Management</a></li>
+            <li><a href="#">Risk Managment</a></li>
+            <li><a href="#">Quality Management</a></li>
+            <li><a href="#">Agile and Hybrid Management</a></li>
+            <li><a href="#">Integration Management</a></li>
+            <li><a href="#">Scope Management</a></li>
+            <li><a href="#">Schedule Management</a></li>
+            <li><a href="#">Cost Management</a></li>
+            <li><a href="#">Resource Management</a></li>
+            <li><a href="#">Procurement Management</a></li>
+            <li><a href="#">Stakeholder Management</a></li>
           </ul>
         </div>
       </div>
