--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="#">Key PM Terms</a></li>
             <li><a href="#">Role and Responsibilities</a></li>
             <li><a href="communication.html">Communication Management</a></li>
-            <li><a href="#">Risk Managment</a></li>
+            <li><a href="risk.html">Risk Managment</a></li>
             <li><a href="#">Quality Management</a></li>
             <li><a href="#">Agile and Hybrid Management</a></li>
             <li><a href="#">Integration Management</a></li>
