--- a/index.html
+++ b/index.html
@@ -1,207 +1,396 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="http://solutions.brightcove.com/wmatsuo/favicon.ico">
-    <title>BC ONBOARDING</title>
-  </head>
-  <body>
-    <button class="nav-btn open-btn">
-      <i class="fas fa-bars"></i>
-    </button>
+<html>
+<head>
+<title>PMP Practice</title>
+<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+</head>
+<body>
 
-    <img src="http://solutions.brightcove.com/wmatsuo/navlogo.png" alt="Logo" class="logo">
-
-    <p class="text">Onboarding</p>
-
-    <div class="nav nav-black">
-      <div class="nav nav-red">
-        <div class="nav nav-orange">
-            <div class="nav nav-yellow">
-                <div class="nav nav-white">
-          <button class="nav-btn close-btn">
-            <i class="fas fa-times"></i>
-          </button>
-
-          <img src="http://solutions.brightcove.com/wmatsuo/navlogo.png" alt="Logo" class="navlogo">
-
-          <ul class="list">
-            <li><a href="#">Key PM Terms</a></li>
-            <li><a href="#">Role and Responsibilities</a></li>
-            <li><a href="communication.html">Communication Management</a></li>
-            <li><a href="risk.html">Risk Managment</a></li>
-            <li><a href="#">Quality Management</a></li>
-            <li><a href="#">Agile and Hybrid Management</a></li>
-            <li><a href="#">Integration Management</a></li>
-            <li><a href="#">Scope Management</a></li>
-            <li><a href="#">Schedule Management</a></li>
-            <li><a href="#">Cost Management</a></li>
-            <li><a href="#">Resource Management</a></li>
-            <li><a href="#">Procurement Management</a></li>
-            <li><a href="#">Stakeholder Management</a></li>
-          </ul>
-        </div>
-      </div>
+<!--
+Inspired by this dribble by The Purple Bunny:
+https://dribbble.com/shots/1677163-Menu
+-->
+<div class="container">
+  <input type="checkbox" class="toggle" id="toggle" checked="checked" /><label class="toggle" for="toggle"> Toggle tilt</label>
+  <div class="menu">
+    <div class="top">
+      <span class="search">
+        <input type="text">
+      </span>
+      <a class="exit" href="#" tabindex="0"></a>
     </div>
-
-    <script src="script.js"></script>
-  </body>
-</html>
-
-
-<script>
-const open_btn = document.querySelector('.open-btn')
-const close_btn = document.querySelector('.close-btn')
-const nav = document.querySelectorAll('.nav')
-
-open_btn.addEventListener('click', () => {
-    nav.forEach(nav_el => nav_el.classList.add('visible'))
-})
-
-close_btn.addEventListener('click', () => {
-    nav.forEach(nav_el => nav_el.classList.remove('visible'))
-})
-</script>
+    <ul class="middle">
+      <li tabindex="0"><i class="fa fa-briefcase"></i>Key Terms</li>
+      <li tabindex="0"><i class="fa fa-address-card"></i>Process &amp; Role</li>
+      <li tabindex="0"><i class="fa fa-spinner"></i>Agile</li>
+      <li tabindex="0"><i class="fa fa-object-group"></i>Integration</li>
+      <li tabindex="0"><i class="fa fa-sitemap"></i>Scope</li>
+      <li tabindex="0"><i class="fa fa-calendar"></i>Schedule</li>
+      <li tabindex="0"><i class="fa fa-donate"></i>Cost</li>
+      <li tabindex="0"><i class="fa fa-certificate"></i>Quality</li>
+      <li tabindex="0"><i class="fa fa-cubes"></i>Resource</li>
+      <li tabindex="0"><i class="fa fa-comments"></i><a href="communication.html">Communication</a></li>
+      <li tabindex="0"><i class="fa fa-bomb"></i><a href="risk.html">Risk</a></li>
+      <li tabindex="0"><i class="fa fa-truck"></i>Procurement</li>
+      <li tabindex="0"><i class="fa fa-address-book"></i>Stakeholder</li>
+    </ul>
+    <div class="bottom"></div>
+    <div class="menu-back"></div>
+    <div class="glass-reflection"></div>
+  </div>
+</div>
 
 <style>
-@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Lato");
 
-* {
+*,
+*:before,
+*:after { /* Slow, yes I know :) */
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-
+html,
 body {
-  font-family: 'Muli', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-.text {
-  text-transform: uppercase;
-  margin-top: 15px;
-}
-
-.logo {
-  height: 33px;
-  width: 250px;
-}
-
-.navlogo {
-  height: 22px;
-  width: 108px;
-}
-
-.nav-btn {
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  font-size: 20px;
-}
-
-.open-btn {
-  position: fixed;
-  top: 10px;
-  left: 10px;
-}
-
-.nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  transform: translateX(-100%);
-  transition: transform 0.3s ease-in-out;
-}
-
-.nav.visible {
-  transform: translateX(0);
-}
-
-.nav-black {
-  background-color: #08088C;
-  width: 60%;
-  max-width: 480px;
-  min-width: 320px;
-  transition-delay: 0.8s;
-}
-
-.nav-black.visible {
-  transition-delay: 0s;
-}
-
-.nav-red {
-  background-color: #00EAE4;
-  width: 87%;
-  transition-delay: 0.6s;
-}
-
-.nav-red.visible {
-  transition-delay: 0.2s;
-}
-
-.nav-orange {
-  background-color: #FF5000;
-  width: 86%;
-  transition-delay: 0.4s;
-}
-
-.nav-orage.visible {
-  transition-delay: 0.4s;
-}
-
-.nav-yellow {
-  background-color: #FFCE00;
-  width: 83%;
-  transition-delay: 0.2s;
-}
-
-.nav-yellow.visible {
-  transition-delay: 0.6s;
-}
-
-.nav-white {
-  background-color: #fff;
-  width: 80%;
-  padding: 40px;
-  position: relative;
-  transition-delay: 0.0s;
-}
-
-.nav-white.visible {
-  transition-delay: 0.8s;
-}
-
-.close-btn {
-  opacity: 0.3;
-  position: absolute;
-  top: 40px;
-  right: 30px;
-}
-
-.list {
-  list-style-type: none;
+  margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: Lato, Sans-serif;
+  font-size: 12px;
+  background: #353138;
+  background: -moz-radial-gradient(center, ellipse cover,  #353138 0%, #1a181c 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #353138), color-stop(100%, #1a181c));
+  background: -webkit-radial-gradient(center, ellipse cover,  #353138 0%,#1a181c 100%);
+  background: -o-radial-gradient(center, ellipse cover,  #353138 0%,#1a181c 100%);
+  background: -ms-radial-gradient(center, ellipse cover,  #353138 0%,#1a181c 100%);
+  background: radial-gradient(ellipse at center,  #353138 0%,#1a181c 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#353138', endColorstr='#1a181c', GradientType=1);
 }
-
-.list li {
-  margin: 20px 0;
+.container {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  -webkit-perspective: 1500px;
+  -moz-perspective: 1500px;
+  -ms-perspective: 1500px;
+  perspective: 1500px;
+  position: relative;
 }
-
-.list li a {
-  color: rgb(34, 31, 31);
-  font-size: 14px;
-  text-decoration: none;
+.toggle {
+  color: #fff;
+  display: inline-block;
+  line-height: 16px;
+  font-size: 20px;
+  float: left;
+}
+.menu {
+  margin: 100px auto;
+  position: relative;
+  background: #08088C;
+  background: -moz-linear-gradient(top,  #08088C 0%, #FF5000 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#08088C), color-stop(100%,#FF5000));
+  background: -webkit-linear-gradient(top,  #08088C 0%,#FF5000 100%);
+  background: -o-linear-gradient(top,  #08088C 0%,#FF5000 100%);
+  background: -ms-linear-gradient(top,  #08088C 0%,#FF5000 100%);
+  background: linear-gradient(to bottom,  #08088C 0%,#FF5000 100%);
+  width: 300px;
+  border-width: 20px 0;
+  border-style: solid;
+  border-color: #fff;
+  color: #fff;
+  height: 730px;
+  -webkit-transform-style: preserve-3d;
+     -moz-transform-style: preserve-3d;
+      -ms-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transition: all 0.5s ease-in-out;
+     -moz-transition: all 0.5s ease-in-out;
+       -o-transition: all 0.5s ease-in-out;
+          transition: all 0.5s ease-in-out;
+  -webkit-box-shadow: 0 0 50px 0 #444;
+     -moz-box-shadow: 0 0 50px 0 #444;
+          box-shadow: 0 0 50px 0 #444;
+}
+input.toggle:checked ~ .menu {
+  -webkit-transform: translateY(-200px) translateZ(-150px) rotateX(45deg) rotateZ(45deg);
+     -moz-transform: translateY(-150px) rotateX(45deg) rotateZ(45deg);
+      -ms-transform: translateY(-150px) rotateX(45deg) rotateZ(45deg);
+       -o-transform: translateY(-150px) rotateX(45deg) rotateZ(45deg);
+          transform: translateY(-150px) rotateX(45deg) rotateZ(45deg);
+}
+.menu:before {
+  content: '';
+  position: absolute;
+  height: 30px;
+  width: 300px;
+  top: 520px;
+  left: 0px;
+  -webkit-transform: rotateX(90deg) translateY(-15px) translateZ(15px);
+     -moz-transform: rotateX(90deg) translateY(-15px) translateZ(15px);
+      -ms-transform: rotateX(90deg) translateY(-15px) translateZ(15px);
+       -o-transform: rotateX(90deg) translateY(-15px) translateZ(15px);
+          transform: rotateX(90deg) translateY(-15px) translateZ(15px);
+  background: #fff;
+  pointer-events: none;
+}
+.menu:after {
+  content: '';
+  position: absolute;
+  height: 730px;
+  width: 30px;
+  top: -20px;
+  right: -30px;
+  -webkit-transform: rotateY(90deg) translateZ(-15px) translateX(15px);
+     -moz-transform: rotateY(90deg) translateZ(-15px) translateX(15px);
+      -ms-transform: rotateY(90deg) translateZ(-15px) translateX(15px);
+       -o-transform: rotateY(90deg) translateZ(-15px) translateX(15px);
+          transform: rotateY(90deg) translateZ(-15px) translateX(15px);
+  border-width: 20px 0;
+  border-style: solid;
+  border-color: #fff;
+  background: #62278d;
+  background: -moz-linear-gradient(top,  #62278d 0%, #2cc09b 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#62278d), color-stop(100%,#2cc09b));
+  background: -webkit-linear-gradient(top,  #62278d 0%,#2cc09b 100%);
+  background: -o-linear-gradient(top,  #62278d 0%,#2cc09b 100%);
+  background: -ms-linear-gradient(top,  #62278d 0%,#2cc09b 100%);
+  background: linear-gradient(to bottom,  #62278d 0%,#2cc09b 100%);
+  pointer-events: none;
+}
+.menu .top {
+  padding: 15px 15px 15px 20px;
+  width: 100%;
+}
+.menu .top .search {
+  position: relative;
+  display: inline-block;
+}
+.menu .top .search input {
+  background-color: transparent;
+  -webkit-transition: all 100ms ease-in-out;
+     -moz-transition: all 100ms ease-in-out;
+      -ms-transition: all 100ms ease-in-out;
+       -o-transition: all 100ms ease-in-out;
+          transition: all 100ms ease-in-out;
+  color: transparent;
+  border: 1px solid #fff;
+  border-radius: 20px;
+  padding: 10px 30px 10px 15px;
+  outline: 0 none;
+  width: 60px;
+  height: 40px;
+  position: relative;
+  -webkit-transform: translateZ(1px);
+     -moz-transform: translateZ(1px);
+      -ms-transform: translateZ(1px);
+       -o-transform: translateZ(1px);
+          transform: translateZ(1px);
+  z-index: 2;
+}
+.menu .top .search input:focus {
+  width: 200px;
+  color: #fff;
+}
+.menu .top .search:after {
+  content: '\f002';
+  font-family: 'FontAwesome';
+  font-size: 16px;
+  position: absolute;
+  color: #fff;
+  top: 11px;
+  right: 18px;
+  width: 20px;
+  height: 20px;
+  pointer-events: none;
+  -webkit-transform: translateZ(1px);
+     -moz-transform: translateZ(1px);
+      -ms-transform: translateZ(1px);
+       -o-transform: translateZ(1px);
+          transform: translateZ(1px);
+  z-index: 1;
+}
+.menu .top .exit {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  outline: 0 none;
+  float: right;
+  cursor: pointer;
+  -webkit-transform: translateZ(1px);
+     -moz-transform: translateZ(1px);
+      -ms-transform: translateZ(1px);
+       -o-transform: translateZ(1px);
+          transform: translateZ(1px);
+  z-index: 2;
+}
+.menu .top .exit:focus,
+.menu .top .exit:active {
+  border: 1px solid #fff;
+  border-radius: 20px;
+}
+.menu .top .exit:before {
+  content: '';
+  pointer-events: none;
+  position: absolute;
+  display: block;
+  width: 30px;
+  height: 30px;
+  top: 14px;
+  left: -6px;
+  border-width: 0 2px 0 0;
+  border-style: solid;
+  border-color: #fff;
+  -webkit-transform: rotate(-45deg);
+     -moz-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+       -o-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  z-index: 1;
+}
+.menu .top .exit:after {
+  content: '';
+  pointer-events: none;
+  position: absolute;
+  display: block;
+  width: 30px;
+  height: 30px;
+  top: -6px;
+  left: -6px; 
+  border-width: 0 2px 0 0;
+  border-style: solid;
+  border-color: #fff;
+  -webkit-transform: rotate(45deg);
+     -moz-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+       -o-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.menu .middle {
+  position: relative;
+  min-height: 40px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
   text-transform: uppercase;
+  font-weight: bold;
+  font-size: 15px;
+  -webkit-transform-style: preserve-3d;
+     -moz-transform-style: preserve-3d;
+      -ms-transform-style: preserve-3d;
+          transform-style: preserve-3d;
 }
-
-.list ul {
-  list-style-type: none;
-  padding-left: 20px;
+.menu .middle li {
+  margin: 0;
+  padding: 15px 0 15px 40px;
+  outline: 0 none;
+  position: relative;
+  -webkit-transform-style: preserve-3d;
+     -moz-transform-style: preserve-3d;
+      -ms-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transform: translateZ(1px);
+     -moz-transform: translateZ(1px);
+      -ms-transform: translateZ(1px);
+       -o-transform: translateZ(1px);
+          transform: translateZ(1px);
+  z-index: 1;
+}
+.menu .middle li:hover {
+  -webkit-box-shadow: inset 0 0 80px 0 rgba(255, 255, 255, 0.3);
+     -moz-box-shadow: inset 0 0 80px 0 rgba(255, 255, 255, 0.3);
+          box-shadow: inset 0 0 80px 0 rgba(255, 255, 255, 0.3);
+  cursor: pointer;
+}
+.menu .middle li:hover:before,
+.menu .middle li:focus:before {
+  content: '\f0da';
+  font-family: 'FontAwesome';
+  font-size: 16px;
+  position: absolute;
+  top: 15px;
+  left: 20px;
+}
+.menu .middle li:focus,
+.menu .middle li:focus:after {
+  color: #3EAC9E;
+  background-color: #62278d;
+}
+.menu .middle li .fa {
+  padding-right: 15px;
+}
+.menu .middle li:focus:after,
+.menu .middle li:hover:after {
+  content: '';
+  position: absolute;
+  height: 48px;
+  width: 30px;
+  top: 0px;
+  right: -30px;
+  -webkit-transform: rotateY(90deg) translateZ(-14px) translateX(15px);
+     -moz-transform: rotateY(90deg) translateZ(-14px) translateX(15px);
+      -ms-transform: rotateY(90deg) translateZ(-14px) translateX(15px);
+       -o-transform: rotateY(90deg) translateZ(-14px) translateX(15px);
+          transform: rotateY(90deg) translateZ(-14px) translateX(15px);
+  pointer-events: none;
+  
+}
+.menu .middle li:hover:after {
+  -webkit-box-shadow: inset 0 0 80px 0 rgba(255, 255, 255, 0.3);
+     -moz-box-shadow: inset 0 0 80px 0 rgba(255, 255, 255, 0.3);
+          box-shadow: inset 0 0 80px 0 rgba(255, 255, 255, 0.3);
+}
+.menu .bottom {
+  height: 730px;
+}
+.menu-back {
+  position: absolute;
+  background: transparent;
+  top: -20px;
+  left: 0;
+  width: 300px;
+  height: 730px;
+  -webkit-transform: translateZ(-29px);
+     -moz-transform: translateZ(-29px);
+      -ms-transform: translateZ(-29px);
+       -o-transform: translateZ(-29px);
+          transform: translateZ(-29px);
+  -webkit-box-shadow: 100px 100px 50px -30px #111;
+     -moz-box-shadow: 100px 100px 50px -30px #111;
+          box-shadow: 100px 100px 50px -30px #111;
+  z-index: 0;
+}
+.glass-reflection {
+  position: absolute;
+  -webkit-transition: box-shadow 1s;
+     -moz-transition: box-shadow 1s;
+      -ms-transition: box-shadow 1s;
+       -o-transition: box-shadow 1s;
+          transition: box-shadow 1s;
+  -webkit-transform: rotateZ(-1deg) translateZ(1px) skewY(60deg);
+     -moz-transform: rotateZ(-1deg) translateZ(1px) skewY(60deg);
+      -ms-transform: rotateZ(-1deg) translateZ(1px) skewY(60deg);
+       -o-transform: rotateZ(-1deg) translateZ(1px) skewY(60deg);
+          transform: rotateZ(-1deg) translateZ(1px) skewY(60deg);
+  
+  -webkit-box-shadow: inset 0px -40px 0px -50px rgba(255, 255, 255, 0.0);
+     -moz-box-shadow: inset 0px -40px 0px -50px rgba(255, 255, 255, 0.0);
+          box-shadow: inset 0px -40px 0px -50px rgba(255, 255, 255, 0.0);
+  border-radius: 200px 0 20px 0 ;
+  top: 85px;
+  left: 95px;
+  width: 200px;
+  height: 100px;
+  background-color: transparent;
+}
+input.toggle:checked ~ .menu .glass-reflection {
+  -webkit-box-shadow: inset 0px -40px 150px -50px rgba(255, 255, 255, 0.15);
+     -moz-box-shadow: inset 0px -40px 150px -50px rgba(255, 255, 255, 0.15);
+          box-shadow: inset 0px -40px 150px -50px rgba(255, 255, 255, 0.15);
 }
 </style>
+</body>
+</html>
