--- a/index.html
+++ b/index.html
@@ -391,6 +391,9 @@ input.toggle:checked ~ .menu .glass-reflection {
      -moz-box-shadow: inset 0px -40px 150px -50px rgba(255, 255, 255, 0.15);
           box-shadow: inset 0px -40px 150px -50px rgba(255, 255, 255, 0.15);
 }
+  a {
+    color: #fff;
+  }
 </style>
 </body>
 </html>
