--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@ input.toggle:checked ~ .menu {
   border-style: solid;
   border-color: #fff;
   background: #62278d;
-  background: -moz-linear-gradient(top,  #62278d 0%, #2cc09b 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#62278d), color-stop(100%,#2cc09b));
-  background: -webkit-linear-gradient(top,  #62278d 0%,#2cc09b 100%);
-  background: -o-linear-gradient(top,  #62278d 0%,#2cc09b 100%);
-  background: -ms-linear-gradient(top,  #62278d 0%,#2cc09b 100%);
-  background: linear-gradient(to bottom,  #62278d 0%,#2cc09b 100%);
+  background: -moz-linear-gradient(top,  #08088C 0%, #FF5000 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#08088C), color-stop(100%,#FF5000));
+  background: -webkit-linear-gradient(top,  #08088C 0%,#FF5000 100%);
+  background: -o-linear-gradient(top,  #08088C 0%,#FF5000 100%);
+  background: -ms-linear-gradient(top,  #08088C 0%,#FF5000 100%);
+  background: linear-gradient(to bottom,  #08088C 0%,#FF5000 100%);
   pointer-events: none;
 }
 .menu .top {
@@ -316,8 +316,8 @@ input.toggle:checked ~ .menu {
 }
 .menu .middle li:focus,
 .menu .middle li:focus:after {
-  color: #3EAC9E;
-  background-color: #62278d;
+  color: #FF5000;
+  background-color: #08088C;
 }
 .menu .middle li .fa {
   padding-right: 15px;
