--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@ body {
   margin: 100px auto;
   position: relative;
   background: #08088C;
-  background: -moz-linear-gradient(top,  #08088C 0%, #FF5000 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#08088C), color-stop(100%,#FF5000));
-  background: -webkit-linear-gradient(top,  #08088C 0%,#FF5000 100%);
-  background: -o-linear-gradient(top,  #08088C 0%,#FF5000 100%);
-  background: -ms-linear-gradient(top,  #08088C 0%,#FF5000 100%);
-  background: linear-gradient(to bottom,  #08088C 0%,#FF5000 100%);
+  background: -moz-linear-gradient(top,  #08088C 0%, #00EAE4 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#08088C), color-stop(100%,#00EAE4));
+  background: -webkit-linear-gradient(top,  #08088C 0%,#00EAE4 100%);
+  background: -o-linear-gradient(top,  #08088C 0%,#00EAE4 100%);
+  background: -ms-linear-gradient(top,  #08088C 0%,#00EAE4 100%);
+  background: linear-gradient(to bottom,  #08088C 0%,#00EAE4 100%);
   width: 300px;
   border-width: 20px 0;
   border-style: solid;
@@ -152,12 +152,12 @@ input.toggle:checked ~ .menu {
   border-style: solid;
   border-color: #fff;
   background: #62278d;
-  background: -moz-linear-gradient(top,  #08088C 0%, #FF5000 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#08088C), color-stop(100%,#FF5000));
-  background: -webkit-linear-gradient(top,  #08088C 0%,#FF5000 100%);
-  background: -o-linear-gradient(top,  #08088C 0%,#FF5000 100%);
-  background: -ms-linear-gradient(top,  #08088C 0%,#FF5000 100%);
-  background: linear-gradient(to bottom,  #08088C 0%,#FF5000 100%);
+  background: -moz-linear-gradient(top,  #08088C 0%, #00EAE4 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#08088C), color-stop(100%,#00EAE4));
+  background: -webkit-linear-gradient(top,  #08088C 0%,#00EAE4 100%);
+  background: -o-linear-gradient(top,  #08088C 0%,#00EAE4 100%);
+  background: -ms-linear-gradient(top,  #08088C 0%,#00EAE4 100%);
+  background: linear-gradient(to bottom,  #08088C 0%,#00EAE4 100%);
   pointer-events: none;
 }
 .menu .top {
@@ -316,7 +316,7 @@ input.toggle:checked ~ .menu {
 }
 .menu .middle li:focus,
 .menu .middle li:focus:after {
-  color: #FF5000;
+  color: #00EAE4;
   background-color: #08088C;
 }
 .menu .middle li .fa {
