--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ https://dribbble.com/shots/1677163-Menu
     </div>
     <ul class="middle">
       <li tabindex="0"><i class="fa fa-briefcase"></i>Key Terms</li>
-      <li tabindex="0"><i class="fa fa-address-card"></i>Process &amp; Role</li>
+      <li tabindex="0"><i class="fa fa-address-card"></i><a href="process.html">Process &amp; Role</a></li>
       <li tabindex="0"><i class="fa fa-spinner"></i>Agile</li>
       <li tabindex="0"><i class="fa fa-object-group"></i>Integration</li>
       <li tabindex="0"><i class="fa fa-sitemap"></i>Scope</li>
