--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ https://dribbble.com/shots/1677163-Menu
     <ul class="middle">
       <li tabindex="0"><i class="fa fa-briefcase"></i>Key Terms</li>
       <li tabindex="0"><i class="fa fa-address-card"></i><a href="process.html">Process &amp; Role</a></li>
-      <li tabindex="0"><i class="fa fa-spinner"></i>Agile</li>
+      <li tabindex="0"><i class="fa fa-spinner"></i><a href="agile.html">Agile</a></li>
       <li tabindex="0"><i class="fa fa-object-group"></i>Integration</li>
       <li tabindex="0"><i class="fa fa-sitemap"></i>Scope</li>
       <li tabindex="0"><i class="fa fa-calendar"></i>Schedule</li>
