--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ https://dribbble.com/shots/1677163-Menu
       <a class="exit" href="#" tabindex="0"></a>
     </div>
     <ul class="middle">
-      <li tabindex="0"><i class="fa fa-briefcase"></i>Key Terms</li>
+      <li tabindex="0"><i class="fa fa-briefcase"></i><a href="key.html">Key Terms</a></li>
       <li tabindex="0"><i class="fa fa-address-card"></i><a href="process.html">Process &amp; Role</a></li>
       <li tabindex="0"><i class="fa fa-spinner"></i><a href="agile.html">Agile</a></li>
       <li tabindex="0"><i class="fa fa-object-group"></i>Integration</li>
