--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ https://dribbble.com/shots/1677163-Menu
       <li tabindex="0"><i class="fa fa-briefcase"></i><a href="key.html">Key Terms</a></li>
       <li tabindex="0"><i class="fa fa-address-card"></i><a href="process.html">Process &amp; Role</a></li>
       <li tabindex="0"><i class="fa fa-spinner"></i><a href="agile.html">Agile</a></li>
-      <li tabindex="0"><i class="fa fa-object-group"></i>Integration</li>
-      <li tabindex="0"><i class="fa fa-sitemap"></i>Scope</li>
+      <li tabindex="0"><i class="fa fa-object-group"></i><a href="integration.html">Integration</a></li>
+      <li tabindex="0"><i class="fa fa-sitemap"></i><a href="scope.html">Scope</a></li>
       <li tabindex="0"><i class="fa fa-calendar"></i>Schedule</li>
       <li tabindex="0"><i class="fa fa-donate"></i>Cost</li>
       <li tabindex="0"><i class="fa fa-certificate"></i>Quality</li>
