--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ https://dribbble.com/shots/1677163-Menu
       <li tabindex="0"><i class="fa fa-spinner"></i><a href="agile.html">Agile</a></li>
       <li tabindex="0"><i class="fa fa-object-group"></i><a href="integration.html">Integration</a></li>
       <li tabindex="0"><i class="fa fa-sitemap"></i><a href="scope.html">Scope</a></li>
-      <li tabindex="0"><i class="fa fa-calendar"></i>Schedule</li>
-      <li tabindex="0"><i class="fa fa-donate"></i>Cost</li>
+      <li tabindex="0"><i class="fa fa-calendar"></i><a href="schedule.html">Schedule</a></li>
+      <li tabindex="0"><i class="fa fa-donate"></i><a href="cost.html">Cost</a></li>
       <li tabindex="0"><i class="fa fa-certificate"></i>Quality</li>
       <li tabindex="0"><i class="fa fa-cubes"></i>Resource</li>
       <li tabindex="0"><i class="fa fa-comments"></i><a href="communication.html">Communication</a></li>
