--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ https://dribbble.com/shots/1677163-Menu
       <li tabindex="0"><i class="fa fa-calendar"></i><a href="schedule.html">Schedule</a></li>
       <li tabindex="0"><i class="fa fa-donate"></i><a href="cost.html">Cost</a></li>
       <li tabindex="0"><i class="fa fa-certificate"></i><a href="quality.html">Quality</a></li>
-      <li tabindex="0"><i class="fa fa-cubes"></i>Resource</li>
+      <li tabindex="0"><i class="fa fa-cubes"></i><a href="resource.html">Resource</a></li>
       <li tabindex="0"><i class="fa fa-comments"></i><a href="communication.html">Communication</a></li>
       <li tabindex="0"><i class="fa fa-bomb"></i><a href="risk.html">Risk</a></li>
       <li tabindex="0"><i class="fa fa-truck"></i>Procurement</li>
