--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>PMP Exercise</title>
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <body>
 
@@ -15,43 +17,43 @@
   <nav class="menu__nav">
     <ul class="menu__list r-list">
       <li class="menu__group">
-        <a href="key.html" class="menu__link r-link">Key Terms</a>
+        <a href="key.html" class="menu__link r-link"><i class="fa fa-briefcase"></i>&nbsp;Key Terms</a>
       </li>
       <li class="menu__group">
-        <a href="process.html" class="menu__link r-link">Process and Roles</a>
+        <a href="process.html" class="menu__link r-link"><i class="fa fa-address-card"></i>&nbsp;Process and Roles</a>
       </li>
       <li class="menu__group">
-        <a href="agile.html" class="menu__link r-link">Agile and Hybrid</a>
+        <a href="agile.html" class="menu__link r-link"><i class="fa fa-spinner"></i>&nbsp;Agile and Hybrid</a>
       </li>
       <li class="menu__group">
-        <a href="integration.html" class="menu__link r-link">Integration</a>
+        <a href="integration.html" class="menu__link r-link"><i class="fa fa-object-group"></i>&nbsp;Integration</a>
       </li>
       <li class="menu__group">
-        <a href="scope.html" class="menu__link r-link">Scope</a>
+        <a href="scope.html" class="menu__link r-link"><i class="fa fa-sitemap"></i>&nbsp;Scope</a>
       </li>
       <li class="menu__group">
-        <a href="schedule.html" class="menu__link r-link">Schedule</a>
+        <a href="schedule.html" class="menu__link r-link"><i class="fa fa-calendar"></i>&nbsp;Schedule</a>
       </li>
        <li class="menu__group">
-        <a href="cost.html" class="menu__link r-link">Cost</a>
+        <a href="cost.html" class="menu__link r-link"><i class="fa fa-donate"></i>&nbsp;Cost</a>
       </li>
        <li class="menu__group">
-        <a href="quality.html" class="menu__link r-link">Quality</a>
+        <a href="quality.html" class="menu__link r-link"><i class="fa fa-certificate"></i>&nbsp;Quality</a>
       </li>
        <li class="menu__group">
-        <a href="resource.html" class="menu__link r-link">Resource</a>
+        <a href="resource.html" class="menu__link r-link"><i class="fa fa-cubes"></i>&nbsp;Resource</a>
       </li>
        <li class="menu__group">
-        <a href="communication.html" class="menu__link r-link">Communication</a>
+        <a href="communication.html" class="menu__link r-link"><i class="fa fa-comments"></i>&nbsp;Communication</a>
       </li>
        <li class="menu__group">
-        <a href="risk.html" class="menu__link r-link">Risk</a>
+        <a href="risk.html" class="menu__link r-link"><i class="fa fa-bomb"></i>&nbsp;Risk</a>
       </li>
        <li class="menu__group">
-        <a href="procurement.html" class="menu__link r-link">Procurement</a>
+        <a href="procurement.html" class="menu__link r-link"><i class="fa fa-truck"></i>&nbsp;Procurement</a>
       </li>
        <li class="menu__group">
-        <a href="stakeholder.html" class="menu__link r-link">Stakeholder</a>
+        <a href="stakeholder.html" class="menu__link r-link"><i class="fa fa-address-book"></i>&nbsp;Stakeholder</a>
       </li>
     </ul>
   </nav>
