--- a/cost.html
+++ b/cost.html
@@ -6,8 +6,20 @@
 
 </head>
 <body>
-
+    <a class="fa fa-home" href="index.html" style="font-size:30px;color:#08088C;"><a href="index.html">HOME</a>
     <iframe src="https://quizlet.com/697336025/learn/embed?i=4f8eak&x=1jj1" height="700" width="100%" style="border:0"></iframe>
+    
+    <style>
+    a {
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    margin-left: 5px;
+    color: #FF5000;
+    text-aligh: center;
+  
+}
+</style>
+    
 </body>
 </html>
 
