--- a/quality.html
+++ b/quality.html
@@ -3,7 +3,7 @@
 <head>
 <title>Quality Management</title>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <a class="fa fa-home" href="index.html" style="font-size:30px;color:#08088C;"><a href="index.html">HOME</a>
