--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>PMP Exercise</title>
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <meta name="viewport" content="width=device-width">
 </head>
 <body>
 
